fix utf_8 depress